fixed mistakes and create pagination