@@ -1,80 +1,73 @@
 package ua.biblioteka.biblioteka_backend.mapper;
 
+import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Component;
-import ua.biblioteka.biblioteka_backend.dto.BookDTO;
-import ua.biblioteka.biblioteka_backend.dto.ImageDTO;
-import ua.biblioteka.biblioteka_backend.entity.Book;
-import ua.biblioteka.biblioteka_backend.entity.Image;
 
-import java.util.Collections;
-import java.util.List;
+import ua.biblioteka.biblioteka_backend.dto.BookRequestDto;
+import ua.biblioteka.biblioteka_backend.dto.BookResponseDto;
+
+import ua.biblioteka.biblioteka_backend.entity.Book;
+
 import java.util.stream.Collectors;
 
 @Component
+@RequiredArgsConstructor
+
 public class BookMapper {
 
-    public BookDTO toDTO(Book book) {
-        BookDTO dto = new BookDTO();
-//        dto.setId(book.getId());
+    private final ImageMapper imageMapper;
+
+    public BookResponseDto toResponseDto(Book book) {
+        if (book == null) return null;
+
+        BookResponseDto dto = new BookResponseDto();
+        dto.setId(book.getId());
         dto.setTitle(book.getTitle());
         dto.setAuthor(book.getAuthor());
+        dto.setDescription(book.getDescription());
+        dto.setPublisher(book.getPublisher());
+        dto.setYear(book.getYear());
         dto.setCategory(book.getCategory());
         dto.setSubcategories(book.getSubcategories());
         dto.setPrice(book.getPrice());
         dto.setQuantity(book.getQuantity());
-        dto.setLanguage(book.getLanguage());
         dto.setAgeRestriction(book.getAgeRestriction());
-        dto.setPublisher(book.getPublisher());
-        dto.setYear(book.getYear());
-        dto.setDescription(book.getDescription());
-
-        List<ImageDTO> imageDTOs = book.getImages().stream()
-                .map(image -> {
-                    ImageDTO imgDto = new ImageDTO();
-                    imgDto.setId(image.getId());
-                    imgDto.setUrl(image.getUrl());
-                    imgDto.setPublicId(image.getPublicId());
-                    return imgDto;
-                })
-                .toList();
-        dto.setImages(imageDTOs);
-
+        dto.setLanguage(book.getLanguage());
+        dto.setImages(book.getImages().stream()
+                .map(imageMapper::toResponseDto)
+                .collect(Collectors.toList())
+        );
         return dto;
     }
 
-    public Book toEntity(BookDTO dto, List<Image> images) {
-        return Book.builder()
-//                .id(dto.getId())
-                .title(dto.getTitle())
-                .author(dto.getAuthor())
-                .publisher(dto.getPublisher())
-                .year(dto.getYear())
-                .description(dto.getDescription())
-                .category(dto.getCategory())
-                .subcategories(dto.getSubcategories())
-                .ageRestriction(dto.getAgeRestriction())
-                .price(dto.getPrice())
-                .quantity(dto.getQuantity())
-                .language(dto.getLanguage())
-                .images(images)
-                .build();
+    public Book toEntity(BookRequestDto dto) {
+        if (dto == null) return null;
+
+        Book book = new Book();
+        book.setTitle(dto.getTitle());
+        book.setAuthor(dto.getAuthor());
+        book.setDescription(dto.getDescription());
+        book.setPublisher(dto.getPublisher());
+        book.setYear(dto.getYear());
+        book.setCategory(dto.getCategory());
+        book.setSubcategories(dto.getSubcategories());
+        book.setPrice(dto.getPrice());
+        book.setQuantity(dto.getQuantity());
+        book.setAgeRestriction(dto.getAgeRestriction());
+        book.setLanguage(dto.getLanguage());
+        book.setImages(dto.getImages().stream()
+                .map(imageMapper::toEntity)
+                .collect(Collectors.toList())
+        );
+        return book;
     }
 
-    
-//    public Book toEntity(BookDTO dto) {
-//        Book book = new Book();
-//    book.setId(dto.getId());
-//        book.setTitle(dto.getTitle());
-//        book.setAuthor(dto.getAuthor());
-//        book.setCategory(dto.getCategory());
-//        book.setSubcategories(dto.getSubcategories());
-//        book.setPrice(dto.getPrice());
-//        book.setQuantity(dto.getQuantity());
-//        book.setLanguage(dto.getLanguage());
-//        book.setAgeRestriction(dto.getAgeRestriction());
-//        book.setPublisher(dto.getPublisher());
-//        book.setYear(dto.getYear());
-//        book.setDescription(dto.getDescription());
-//        return book;
-//    }
+
+
+
+
+
+
+
+
 }
